add: pointer to solutions' list

--- a/README
+++ b/README
@@ -4,4 +4,5 @@ Enumerate formulas adding up to 24
 - all possible 3x operations
 - all valid combinations of 2, 3, 3, 4
 - filter valid formulas which evaluate (as string) to 24
+- solutions in '24.txt' (with some clarifications)
 
