--- a/README
+++ b/README
@@ -1,3 +1,15 @@
+Difference-of-squares (2020-10-02)
+
+- sqrdiff1400.py
+  - source includes logs
+
+
+Riddler Township election (2020-07-24)
+
+- main program: elect.py
+- log with sorted results: elect.log
+
+
 Enumerate formulas adding up to 24
 
 - all possible parenthesis-pair combinations
@@ -8,9 +20,4 @@ Enumerate formulas adding up to 24
 - solutions in '24.txt' (with some clarifications)
 - solver is 24search.py
 - all evaluated formulas in 24all.log
-
-Riddler Township election (2020-07-24)
-
-- main program: elect.py
-- log with sorted results: elect.log
 
